<?xml version="1.0"?>
<package format="3">
  <name>blueboat_cirtesu_bringup</name>
  <version>0.0.0</version>
  <description>Bringup package for the real BlueBoat CIRTESU setup</description>

  <maintainer email="you@example.com">you</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <exec_depend>blueboat_cirtesu_description</exec_depend>
  <exec_depend>fast_lio</exec_depend>
  <exec_depend>localizer</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>